--- a/disk-swap/build.yaml
+++ b/disk-swap/build.yaml
@@ -4,5 +4,5 @@ build_from:
 labels:
   org.opencontainers.image.title: "Home Assistant App: Disk Swap"
   org.opencontainers.image.description: "Flash HA OS to any USB device directly from Home Assistant."
-  org.opencontainers.image.source: "https://github.com/eliav2/ha-disk-swap"
+  org.opencontainers.image.source: "https://github.com/Eliav2/ha-disk-swap"
   org.opencontainers.image.licenses: "MIT"
