--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: Disk Swap for Home Assistant
-url: "https://github.com/eliav2/ha-disk-swap"
+url: "https://github.com/Eliav2/ha-disk-swap"
 maintainer: Eliav
