frontend: React SPA with shadcn/ui (Base UI) + 4-screen clone flow
Vite + React 19 + Tailwind v4 + shadcn/ui (base-nova style, indigo theme)
with React Query for data fetching. useReducer state machine drives
device select → confirm → progress → complete screens.
Build output served by Hono backend at :8099.

--- a/disk-swap/config.yaml
+++ b/disk-swap/config.yaml
@@ -22,7 +22,7 @@ udev: true
 ingress: true
 ingress_port: 8099
 ingress_entry: /
-panel_icon: "mdi:harddisk"
+panel_icon: "mdi:micro-sd"
 panel_title: "Disk Swap"
 
 # Supervisor API access
