--- a/disk-swap/frontend/package.json
+++ b/disk-swap/frontend/package.json
@@ -16,6 +16,7 @@
     "@hugeicons/react": "^1.1.5",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-store": "^0.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "react": "^19.2.0",
