--- a/disk-swap/package.json
+++ b/disk-swap/package.json
@@ -5,7 +5,14 @@
   "type": "module",
   "scripts": {
     "start": "bun run server/index.ts",
-    "dev": "DEV=1 bun --watch run server/index.ts"
+    "dev": "DEV=1 bun --watch run server/index.ts",
+    "build": "cd frontend && bun run build",
+    "sync": "rsync -av --delete --exclude='frontend/' --exclude='node_modules/' ./ root@192.168.64.2:/addons/disk-swap/",
+    "rebuild": "ssh root@192.168.64.2 'ha store reload && (ha apps rebuild local_disk-swap 2>/dev/null || ha apps update local_disk-swap)'",
+    "deploy": "bun run build && bun run sync && bun run rebuild",
+    "deploy:quick": "bun run sync && bun run rebuild",
+    "logs": "ssh root@192.168.64.2 'ha apps logs local_disk-swap -f'",
+    "restart": "ssh root@192.168.64.2 'ha apps restart local_disk-swap'"
   },
   "dependencies": {
     "hono": "^4.7.0"
