fix: pre-cache using temp containerd daemon + ctr pull in moby namespace
Raw blob copy (crane OCI) was ignored by containerd because it checks BoltDB
metadata, not the filesystem. Unreferenced blobs also get GC'd on startup.

New approach:
- Start a temporary containerd v2.2.1 daemon with --root pointing to the
  target disk's Docker data directory (/mnt/newsd/docker/containerd/daemon)
- Pull the HA Core image with `ctr -n moby images pull` — this creates both
  content-addressable blobs AND BoltDB image records in the moby namespace
- The moby namespace is what Docker Engine uses, so it finds the image on boot
- containerd binary from containerd/containerd:2.2.1 (Alpine-based, musl) via
  Dockerfile multi-stage build — version-matched to HA OS Docker 29.x

On first boot: Docker finds the image, skips ~715 MB download, only unpacks
layers locally (fast). Also fix stale .HA_RESTORE comment in injector.ts.

--- a/disk-swap/Dockerfile
+++ b/disk-swap/Dockerfile
@@ -1,4 +1,11 @@
 ARG BUILD_FROM
+
+# Extract containerd v2.2.1 binaries from the official Alpine-based image.
+# This image is compiled on Alpine (musl), so the binaries are compatible with
+# HA addon containers. Version must match HA OS (Docker 29.x → containerd 2.2.1)
+# to ensure BoltDB schema compatibility when pre-caching Docker images.
+FROM containerd/containerd:2.2.1 AS containerd-bins
+
 FROM $BUILD_FROM
 
 # Install system dependencies:
@@ -22,6 +29,18 @@ RUN apk add --no-cache \
     curl \
     parted \
     mount
+
+# Install crane for image manifest inspection (size estimation for progress reporting)
+RUN ARCH=$(uname -m) && \
+    CRANE_ARCH=$([ "$ARCH" = "aarch64" ] && echo "arm64" || echo "x86_64") && \
+    curl -fsSL "https://github.com/google/go-containerregistry/releases/download/v0.21.1/go-containerregistry_Linux_${CRANE_ARCH}.tar.gz" -o /tmp/crane.tar.gz && \
+    tar xzf /tmp/crane.tar.gz -C /usr/local/bin crane && \
+    rm /tmp/crane.tar.gz && \
+    chmod +x /usr/local/bin/crane
+
+# Copy containerd + ctr from the versioned image (musl-compatible, version-matched)
+COPY --from=containerd-bins /usr/local/bin/containerd /usr/local/bin/containerd
+COPY --from=containerd-bins /usr/local/bin/ctr /usr/local/bin/ctr
 
 # Install Bun runtime
 ARG BUN_VERSION=1.2.4
